examples/test/testpolicy7704.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7704
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key9: value22
      key46: value17
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value31
          key1: value48
          key12: value22
      podSelector:
        matchLabels:
          key26: value13
          key18: value2
